--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- The Book -->
   <div id="book" class="book">
       <!-- Paper 1 -->
-      <div data-page="page1" class="paper">
+      <div data-page="page1" class="paper first">
           <div class="front">
               <div id="f1" class="front-content">
                   <h1 class="book-title">Little Dog</h1>
@@ -95,6 +95,36 @@
               <div id="b3" class="back-content">
                   <h1>back</h1>
                   <p>Page 5</p>
+              </div>
+          </div>
+      </div>
+      <!-- Paper 6 -->
+      <div data-page="page6" class="paper">
+          <div class="front">
+              <div id="f3" class="front-content">
+                  <h1>front</h1>
+                  <p>Page 6</p>
+              </div>
+          </div>
+          <div class="back">
+              <div id="b3" class="back-content">
+                  <h1>back</h1>
+                  <p>Page 6</p>
+              </div>
+          </div>
+      </div>
+      <!-- Paper 7 -->
+      <div data-page="page7" class="paper">
+          <div class="front">
+              <div id="f3" class="front-content">
+                  <h1>front</h1>
+                  <p>Page 7</p>
+              </div>
+          </div>
+          <div class="back">
+              <div id="b3" class="back-content">
+                  <h1>back</h1>
+                  <p>Page 7</p>
               </div>
           </div>
       </div>
