Code cleanup / comments

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <!-- Paper 1 -->
       <div data-page="page1" class="paper first">
           <div class="front">
-              <div id="f1" class="front-content">
+              <div class="front-content">
                   <h1 class="book-title">Little Dog</h1>
                   <img class="cover-img" src="./dog.jpg" alt="dog">
               </div>
           </div>
           <div class="back">
-              <div id="b1" class="back-content">
+              <div class="back-content">
                   <h2>Some Intro</h2>
                   <div class="content">
                       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -41,13 +41,13 @@
       <!-- Paper 2 -->
       <div data-page="page2" class="paper">
           <div class="front">
-              <div id="f2" class="front-content">
+              <div class="front-content">
                   <h1>Front</h1>
                   <p>Page 2</p>
               </div>
           </div>
           <div class="back">
-              <div id="b2" class="back-content">
+              <div class="back-content">
                   <h1>back</h1>
                   <p>Page 2</p>
               </div>
@@ -56,13 +56,13 @@
       <!-- Paper 3 -->
       <div data-page="page3" class="paper">
           <div class="front">
-              <div id="f3" class="front-content">
+              <div class="front-content">
                   <h1>front</h1>
                   <p>Page 3</p>
               </div>
           </div>
           <div class="back">
-              <div id="b3" class="back-content">
+              <div class="back-content">
                   <h1>back</h1>
                   <p>Page 3</p>
               </div>
@@ -71,13 +71,13 @@
       <!-- Paper 4 -->
       <div data-page="page4" class="paper">
           <div class="front">
-              <div id="f3" class="front-content">
+              <div class="front-content">
                   <h1>front</h1>
                   <p>Page 4</p>
               </div>
           </div>
           <div class="back">
-              <div id="b3" class="back-content">
+              <div class="back-content">
                   <h1>back</h1>
                   <p>Page 4</p>
               </div>
@@ -86,13 +86,13 @@
       <!-- Paper 5 -->
       <div data-page="page5" class="paper">
           <div class="front">
-              <div id="f3" class="front-content">
+              <div class="front-content">
                   <h1>front</h1>
                   <p>Page 5</p>
               </div>
           </div>
           <div class="back">
-              <div id="b3" class="back-content">
+              <div class="back-content">
                   <h1>back</h1>
                   <p>Page 5</p>
               </div>
@@ -101,13 +101,13 @@
       <!-- Paper 6 -->
       <div data-page="page6" class="paper">
           <div class="front">
-              <div id="f3" class="front-content">
+              <div class="front-content">
                   <h1>front</h1>
                   <p>Page 6</p>
               </div>
           </div>
           <div class="back">
-              <div id="b3" class="back-content">
+              <div class="back-content">
                   <h1>back</h1>
                   <p>Page 6</p>
               </div>
@@ -116,13 +116,13 @@
       <!-- Paper 7 -->
       <div data-page="page7" class="paper">
           <div class="front">
-              <div id="f3" class="front-content">
+              <div class="front-content">
                   <h1>front</h1>
                   <p>Page 7</p>
               </div>
           </div>
           <div class="back">
-              <div id="b3" class="back-content">
+              <div class="back-content">
                   <h1>back</h1>
                   <p>Page 7</p>
               </div>
