--- a/index.html
+++ b/index.html
@@ -1,139 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/style.css">
-   <script src="https://kit.fontawesome.com/b0f29e9bfe.js" crossorigin="anonymous"></script>
-   <title>Document</title>
-</head>
-<body>
-   
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="css/style.css" />
+      <script
+         src="https://kit.fontawesome.com/b0f29e9bfe.js"
+         crossorigin="anonymous"
+      ></script>
+      <title>Document</title>
+   </head>
+   <body>
+      <button id="prev-btn">
+         <i class="fas fa-arrow-circle-left"></i>
+      </button>
 
-   <button id="prev-btn">
-      <i class="fas fa-arrow-circle-left"></i>
-  </button>
+      <!-- The Book -->
+      <div id="book" class="book">
+         <!-- Paper 1 -->
+         <div class="paper">
+            <div class="front-content">
+               <h1 class="book-title">Little Dog</h1>
+               <img class="cover-img" src="./dog.jpg" alt="dog" />
+            </div>
+         </div>
+         <div class="paper">
+            <div class="back-content">
+               <h2>Some Intro</h2>
+               <div class="content">
+                  <p>
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  </p>
+                  <p>
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  </p>
+                  <p>
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  </p>
+                  <p>
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  </p>
+                  <p>
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  </p>
+               </div>
+            </div>
+         </div>
+         <!-- Paper 2 -->
+         <div class="paper">
+            <div class="front-content">
+               <h1>Front</h1>
+               <p>Page 2</p>
+            </div>
+         </div>
+         <div class="paper">
+            <div class="back-content">
+               <h1>back</h1>
+               <p>Page 2</p>
+            </div>
+         </div>
+         <!-- Paper 3 -->
+         <div class="paper">
+            <div class="front-content">
+               <h1>front</h1>
+               <p>Page 3</p>
+            </div>
+         </div>
+         <div class="paper">
+            <div class="back-content">
+               <h1>back</h1>
+               <p>Page 3</p>
+            </div>
+         </div>
+         <!-- Paper 4 -->
+         <div class="paper">
+            <div class="front-content">
+               <h1>front</h1>
+               <p>Page 4</p>
+            </div>
+         </div>
+         <div class="paper">
+            <div class="back-content">
+               <h1>back</h1>
+               <p>Page 4</p>
+            </div>
+         </div>
 
-  <!-- The Book -->
-  <div id="book" class="book">
-      <!-- Paper 1 -->
-      <div data-page="page1" class="paper first">
-          <div class="front">
-              <div class="front-content">
-                  <h1 class="book-title">Little Dog</h1>
-                  <img class="cover-img" src="./dog.jpg" alt="dog">
-              </div>
-          </div>
-          <div class="back">
-              <div class="back-content">
-                  <h2>Some Intro</h2>
-                  <div class="content">
-                      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                  </div>
-              </div>
-          </div>
+         <!-- Paper 7 -->
+         <div class="paper">
+            <div class="front-content">
+               <h1>front</h1>
+               <p>Page 5</p>
+            </div>
+         </div>
+         <div class="paper">
+            <div class="back-content">
+               <h1>back</h1>
+               <p>Page 5</p>
+            </div>
+         </div>
       </div>
-      <!-- Paper 2 -->
-      <div data-page="page2" class="paper">
-          <div class="front">
-              <div class="front-content">
-                  <h1>Front</h1>
-                  <p>Page 2</p>
-              </div>
-          </div>
-          <div class="back">
-              <div class="back-content">
-                  <h1>back</h1>
-                  <p>Page 2</p>
-              </div>
-          </div>
-      </div>
-      <!-- Paper 3 -->
-      <div data-page="page3" class="paper">
-          <div class="front">
-              <div class="front-content">
-                  <h1>front</h1>
-                  <p>Page 3</p>
-              </div>
-          </div>
-          <div class="back">
-              <div class="back-content">
-                  <h1>back</h1>
-                  <p>Page 3</p>
-              </div>
-          </div>
-      </div>
-      <!-- Paper 4 -->
-      <div data-page="page4" class="paper">
-          <div class="front">
-              <div class="front-content">
-                  <h1>front</h1>
-                  <p>Page 4</p>
-              </div>
-          </div>
-          <div class="back">
-              <div class="back-content">
-                  <h1>back</h1>
-                  <p>Page 4</p>
-              </div>
-          </div>
-      </div>
-      <!-- Paper 5 -->
-      <div data-page="page5" class="paper">
-          <div class="front">
-              <div class="front-content">
-                  <h1>front</h1>
-                  <p>Page 5</p>
-              </div>
-          </div>
-          <div class="back">
-              <div class="back-content">
-                  <h1>back</h1>
-                  <p>Page 5</p>
-              </div>
-          </div>
-      </div>
-      <!-- Paper 6 -->
-      <div data-page="page6" class="paper">
-          <div class="front">
-              <div class="front-content">
-                  <h1>front</h1>
-                  <p>Page 6</p>
-              </div>
-          </div>
-          <div class="back">
-              <div class="back-content">
-                  <h1>back</h1>
-                  <p>Page 6</p>
-              </div>
-          </div>
-      </div>
-      <!-- Paper 7 -->
-      <div data-page="page7" class="paper">
-          <div class="front">
-              <div class="front-content">
-                  <h1>front</h1>
-                  <p>Page 7</p>
-              </div>
-          </div>
-          <div class="back">
-              <div class="back-content">
-                  <h1>back</h1>
-                  <p>Page 7</p>
-              </div>
-          </div>
-      </div>
-  </div>
 
-  <button id="next-btn">
-      <i class="fas fa-arrow-circle-right"></i>
-  </button>
+      <button id="next-btn">
+         <i class="fas fa-arrow-circle-right"></i>
+      </button>
 
-  <script defer src="js/app.js"></script>
-</body>
+      <script defer src="js/app.js"></script>
+   </body>
 </html>
